<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center"
            android:text="@string/best_places_text"
            android:textColor="@color/slidingTabsColor"
            android:textSize="@dimen/subtitle_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center"
            android:text="@string/city_name_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_size"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:contentDescription="@string/city_banner_description"
            android:scaleType="centerCrop"
            android:src="@drawable/cluj_panorama" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="start"
            android:text="@string/city_description"
            android:textColor="@color/slidingTabsColor"
            android:textSize="@dimen/paragraph_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="start"
            android:text="@string/app_description"
            android:textColor="@color/slidingTabsColor"
            android:textSize="@dimen/paragraph_text_size" />

    </LinearLayout>

</ScrollView>